# Sakoban

./: CMakeLists.txt  LICENSE  README.md
cmake/: Defines_Common.cmake  IncludeDirs_Common.cmake  IncludeDirs_External.cmake  Libs.cmake  Sources_Common.cmake  Sources_External.cmake
cmake/General/: Warnings.cmake
cmake/Qt/: QtConfiguration.cmake  QtHelperFunctions.cmake
icons/: sakoban.rc
src/: CMakeLists.txt  GameRules.cpp  GameRules.h  ILevelRepository.h  Level1.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  Playground.h  Sakoban.cpp  Sakoban.h  SakobanUI.cpp  SakobanUI.h  SakobanUI.ui  main.cpp  style.qss  testclient.cpp  testclient.h  wtestclient.cpp  wtestclient.h  wtestclient.ui
src/levels/: HardCodedLevelRepository.cpp  HardCodedLevelRepository.h  Level1.h  Level10.h  Level11.h  Level12.h  Level13.h  Level14.h  Level15.h  Level2.h  Level3.h  Level4.h  Level5.h  Level6.h  Level7.h  Level8.h  Level9.h
